cabal-version:  3.0
name:           nonempty-containers
version:        0.3.5.0
synopsis:       Non-empty variants of containers data types, with full API.
description:    Fork of nonempty-containers with updates + allowing a smaller dependency footprint.
                 
                Efficient and optimized non-empty versions of types from /containers/.
                Inspired by /non-empty-containers/ library, except attempting a more
                faithful port (with under-the-hood optimizations) of the full /containers/
                API. Also contains a convenient typeclass abstraction for converting
                betwewen non-empty and possibly-empty variants. See README.md for more
                information.
category:       Data
homepage:       https://github.com/emeinhardt/nonempty-containers#readme
bug-reports:    https://github.com/emeinhardt/nonempty-containers/issues
author:         Justin Le
maintainer:     justin@jle.im
copyright:      (c) Justin Le 2018
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/emeinhardt/nonempty-containers

common warnings
  ghc-options:  -Wall -Wdefault -Wno-orphans -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

library
  import:             warnings
  hs-source-dirs:     src
  default-language:   Haskell2010
  other-extensions:

  exposed-modules:
    Data.Containers.NonEmpty
    Data.IntMap.NonEmpty
    Data.IntMap.NonEmpty.Internal
    Data.IntSet.NonEmpty
    Data.IntSet.NonEmpty.Internal
    Data.Map.NonEmpty
    Data.Map.NonEmpty.Internal
    Data.Sequence.NonEmpty
    Data.Sequence.NonEmpty.Internal
    Data.Set.NonEmpty
    Data.Set.NonEmpty.Internal
  other-modules:
    Paths_nonempty_containers
  build-depends:
      aeson
    , base >=4.9 && <5
    , comonad
    , containers >=0.5.9
    , deepseq
    , invariant
    , nonempty-vector
    , semigroupoids
    , these
    , vector


test-suite nonempty-containers-test
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  type: exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is: Spec.hs
  other-modules:
      Tests.IntMap
      Tests.IntSet
      Tests.Map
      Tests.Sequence
      Tests.Set
      Tests.Util
      Paths_nonempty_containers
  build-depends:
      base >=4.9 && <5
    , comonad
    , containers >=0.5.9
    , hedgehog >=1.0
    , hedgehog-fn >=1.0
    , invariant
    , nonempty-containers
    , nonempty-vector
    , semigroupoids
    , tasty
    , tasty-hedgehog >=1.0
    , text
    , these
    , vector
