cabal-version:  3.0
name:           nonempty-containers-alt
version:        0.3.5.1
synopsis:       Non-empty variants of containers data types, with full API.
description:    This is a fork of @nonempty-containers@ with a smaller obligatory dependency footprint:
                @aeson@ instances are opt-in (via a flag) and package tests have been moved into
                @nonempty-containers-test@.
                 
                Efficient and optimized non-empty versions of types from @containers@.
                Inspired by @non-empty-containers@ library, except attempting a more
                faithful port (with under-the-hood optimizations) of the full @containers@
                API. Also contains a convenient typeclass abstraction for converting
                betwewen non-empty and possibly-empty variants. See README.md for more
                information.
category:       Data
homepage:       https://github.com/emeinhardt/nonempty-containers/nonempty-containers-alt#readme
bug-reports:    https://github.com/emeinhardt/nonempty-containers/issues
author:         Justin Le
maintainer:     justin@jle.im
copyright:      (c) Justin Le 2018
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/emeinhardt/nonempty-containers

flag aeson
  description:
    You can enable the use of the `aeson` package using `-f-aeson`.

    If disabled the package will not supply instances of `Aeson` types.
  default: False
  manual:  False


common warnings
  ghc-options:  -Wall -Wdefault -Wno-orphans -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

library
  import:             warnings
  hs-source-dirs:     src
  default-language:   Haskell2010
  other-extensions:

  exposed-modules:
    Data.Containers.NonEmpty
    Data.IntMap.NonEmpty
    Data.IntMap.NonEmpty.Internal
    Data.IntSet.NonEmpty
    Data.IntSet.NonEmpty.Internal
    Data.Map.NonEmpty
    Data.Map.NonEmpty.Internal
    Data.Sequence.NonEmpty
    Data.Sequence.NonEmpty.Internal
    Data.Set.NonEmpty
    Data.Set.NonEmpty.Internal
  build-depends:
      base >=4.9 && <5
    , comonad
    , containers >=0.5.9
    , deepseq
    , invariant
    , nonempty-vector
    , semigroupoids
    , these
    , semialign
    , vector
  if flag(aeson)
    build-depends: aeson
