cabal-version:  3.0
name:           nonempty-containers-test
version:        0.3.5.0
synopsis:       Separate test package for non-empty-containers-alt.
description:    Separated test package @non-empty-containers-alt@ to reduce the obligatory
                dependency footprint.
category:       Data
homepage:       https://github.com/emeinhardt/nonempty-containers/nonempty-containers-test#readme
bug-reports:    https://github.com/emeinhardt/nonempty-containers/issues
author:         Justin Le
maintainer:     justin@jle.im
copyright:      (c) Justin Le 2018
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/emeinhardt/nonempty-containers

common warnings
  ghc-options:  -Wall -Wdefault -Wno-orphans -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

-- This is present only to please nix.
library
  import:             warnings
  default-language:   Haskell2010
  hs-source-dirs:     src
  other-modules:      MyLib
  build-depends:      base >=4.9 && <5

test-suite nonempty-containers-test
  import:            warnings
  type:              exitcode-stdio-1.0
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010
  hs-source-dirs:    test
  main-is:           Spec.hs
  other-modules:
      Tests.IntMap
      Tests.IntSet
      Tests.Map
      Tests.Sequence
      Tests.Set
      Tests.Util
  build-depends:
      base >=4.9 && <5
    , comonad
    , containers >=0.5.9
    , hedgehog >=1.0
    , hedgehog-fn >=1.0
    , invariant
    , nonempty-containers-alt
    , nonempty-vector
    , semigroupoids
    , tasty
    , tasty-hedgehog >=1.0
    , text
    , these
    , vector
